List members med et filter og implementeret fragments

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -9,9 +9,12 @@
 
 <footer th:fragment="footer">
     <div class="footerLeft">
-        <p>Brøndby Bordtennis Club</p>
-        <p>Følg os på:</p>
-        <p>Kontakt</p>
+        <a href="https://www.google.dk/maps/place/Br%C3%B8ndby+Bordtennis+Club/@55.6459023,12.4152098,17z/data=!3m1!4b1!4m5!3m4!1s0x465256dc93bd8f09:0xc6a5447234b28de0!8m2!3d55.6459023!4d12.4173985?hl=da">
+            <u>Adresse:</u>
+        </a>
+        <p>Brøndby Hallen (kælderen) </p>
+        <p>Brøndby Stadion 10        </p>
+        <p>2605 Brøndby              </p>
     </div>
 </footer>
 
