--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -39,13 +39,13 @@
         <div class="container topNav">
         <ul>
             <li><a href="/" th:classappend="${#httpServletRequest.getRequestURI().matches('/') ? 'active' : ''}">Forside</a></li>
-            <li><a href="/rentMotorhome/rent"  th:classappend="${#httpServletRequest.getRequestURI().startsWith('/rentMotorhome') ? 'active':''}">Nyheder</a></li>
+<!--            <li><a href="/rentMotorhome/rent"  th:classappend="${#httpServletRequest.getRequestURI().startsWith('/rentMotorhome') ? 'active':''}">Nyheder</a></li>-->
 <!--            <li><a href="/activeMotorhome/available"  th:classappend="${#httpServletRequest.getRequestURI().startsWith('/activeMotorhome') ? 'active':''}">Stævner</a></li>-->
             <li><a href="#">Medlemmer</a>
                 <!-- First Tier Drop Down -->
                 <ul>
-                    <li><a href="/motorhomes/createMotorhome" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/motorhomes') ? 'active':''}">Opret Medlem</a></li>
-                    <li><a href="/motorhomes/list" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/motorhomes') ? 'active':''}">Medlems List</a></li>
+                    <li><a href="members/createMember" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/members') ? 'active':''}">Opret Medlem</a></li>
+                    <li><a href="/members/listMembers" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/members') ? 'active':''}">Medlems Liste</a></li>
                 </ul>
             </li>
             <li><a href="#">Kalender</a>
