--- a/src/main/resources/templates/editMember.html
+++ b/src/main/resources/templates/editMember.html
@@ -4,37 +4,13 @@
     <meta charset="UTF-8">
     <title>Rediger</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="../../css/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
-<header>
-    <img src="headerphoto454.jpg" height="290" width="1800"/>
-</header>
 
 <div th:insert="fragments/menu :: menu"></div>
-
-<section>
-    <sidebar>
-        <ul>
-            <h2>Følg os her:</h2>
-            <li><p>
-                <a href="https://www.facebook.com/brondbybordtennis/">
-                    <img src="http://brondbybordtennisclub.dk/wordpress/wp-content/uploads/Facebook-Icon-Resized-2.png" width="40">
-                </a>
-                <a href="https://www.youtube.com/channel/UCJ7luifmH0GFRba1ktKsfjw/videos">
-                    <img src="http://brondbybordtennisclub.dk/wordpress/wp-content/uploads/YouTube-Icon-Table-tennis-ball-Resized-3.png" width="40">
-                </a>
-                <a href="https://www.instagram.com/brondbybordtennisclub/?hl=da">
-                    <img src="http://brondbybordtennisclub.dk/wordpress/wp-content/uploads/Instagram_Logo.png" width="40">
-                </a>
-            </li></p>
-
-            <img src="http://brondbybordtennisclub.dk/wordpress/wp-content/uploads/BBC-Logo-Gennemsigtig-Resized.png" width="200" height="200">
-
-        </ul>
-    </sidebar>
-</section>
+<div th:insert="fragments/sidebar :: sidebar"></div>
 
 <div class="container">
     <form action="/editedMember" method="post" >
@@ -66,6 +42,8 @@
         <input th:type="submit" th:value="submit" id="submit" th:name="submit">
     </form>
 </div>
+
+<div th:insert="fragments/footer :: footer"></div>
 
 </body>
 </html>
