--- a/src/main/resources/templates/listMembers.html
+++ b/src/main/resources/templates/listMembers.html
@@ -5,6 +5,7 @@
     <title>Klub medlemmer</title>
     <link href="../css/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
 
@@ -37,6 +38,7 @@
             <th>Fødselsdag</th>
             <th>Telefonnummer</th>
             <th>Stop dato</th>
+            <th></th>
         </tr>
 
         <tr th:each="member : ${members}">
@@ -57,6 +59,12 @@
             <td th:text="${member.getBirthday()}"></td>
             <td th:text="${member.getPhoneNumber()}"></td>
             <td th:text="${member.getStopDate()}"></td>
+            <td>
+                <button><a th:href="@{/members/editMember/__${member.getId()}__}">Rediger medlem</a></button>
+                <div th:id="${'deleteBtn' + member.getId()}">
+                    <button class="btn" th:onclick="'javascript:confirmDelete(\'' + ${member.getId()} + '\');'">Delete</button>
+                </div>
+            </td>
         </tr>
     </table>
 </article></section>
@@ -64,4 +72,49 @@
 <div th:insert="fragments/footer :: footer"></div>
 
 </body>
+<script type="text/javascript">
+
+    function confirmDelete(id){
+        console.log("hej") //lav en metode der give en ny knap confirm, not confirm!
+        console.log(id)
+        var delBtn = 'deleteBtn' + id;
+        $("#" + delBtn).empty();
+        var form = $("<form/>",
+            {action:'/confirmDelete',
+                method:'POST',
+                id:'confirmDelete'
+            }
+        );
+        form.append(
+            $("<input>",
+                {
+                    type:'hidden',
+                    value:id,
+                    name:'id',
+                    id:'id'
+                }
+            )
+        );
+        form.append(
+            $("<input>",
+                {
+                    type: 'date',
+                    name: 'stopDate'
+                }
+            )
+        );
+        form.append(
+            $("<input>",
+                {
+                    type: 'submit',
+                    class:'btn-del btn',
+                    value: 'confirm',
+                    name: 'submit'
+                }
+            )
+        );
+        console.log(form)
+        $("#" + delBtn).append(form);
+    }
+</script>
 </html>
