--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -7,8 +7,7 @@
 </head>
 <body>
 
-<section th:fragment="sidebar">
-    <sidebar>
+<div class="columnsidebar" th:fragment="sidebar">
         <ul>
             <h2>Følg os her:</h2>
             <li><p>
@@ -25,9 +24,14 @@
 
             <img src="http://brondbybordtennisclub.dk/wordpress/wp-content/uploads/BBC-Logo-Gennemsigtig-Resized.png" width="200" height="200">
 
+            <a href="https://www.google.dk/maps/place/Br%C3%B8ndby+Bordtennis+Club/@55.6459023,12.4152098,17z/data=!3m1!4b1!4m5!3m4!1s0x465256dc93bd8f09:0xc6a5447234b28de0!8m2!3d55.6459023!4d12.4173985?hl=da">
+                <u style="color: lightskyblue">Adresse:</u>
+            </a>
+            <p style="color: #dddddd">Brøndby Hallen (kælderen) </p>
+            <p style="color: #dddddd">Brøndby Stadion 10        </p>
+            <p style="color: #dddddd">2605 Brøndby              </p>
         </ul>
-    </sidebar>
-</section>
+</div>
 
 </body>
 </html>
