--- a/src/main/resources/templates/createMember.html
+++ b/src/main/resources/templates/createMember.html
@@ -9,37 +9,38 @@
 <body>
 
 <div th:insert="fragments/menu :: menu"></div>
-<section th:insert="fragments/sidebar :: sidebar"></section>
 
-<article>
-    <form action="/member/add" method="post">
-        <h1>Create member</h1>
-        <label>Fornavn:</label>
-        <input type="text" name="firstName" required placeholder="Fornavn">
+<div class="row">
+    <div class="columnsidebar" th:insert="fragments/sidebar :: sidebar"></div>
 
-        <label>Efternavn:</label>
-        <input type="text" name="lastName" required placeholder="Efternavn">
+    <div class="column">
+        <form action="/member/add" method="post">
+            <h1>Create member</h1>
+            <label>Fornavn:</label>
+            <input type="text" name="firstName" required placeholder="Fornavn">
 
-        <label>Køn (1 for kvinde, 0 for mand):</label>
-        <input type="number" name="isFemale" required max="1" min="0" step="1" placeholder="1 for kvinde, 0 for mand">
+            <label>Efternavn:</label>
+            <input type="text" name="lastName" required placeholder="Efternavn">
 
-        <label>Mail:</label>
-        <input type="text" name="mail" required placeholder="Mail">
+            <label>Køn (1 for kvinde, 0 for mand):</label>
+            <input type="number" name="isFemale" required max="1" min="0" step="1" placeholder="1 for kvinde, 0 for mand">
 
-        <label>Start dato:</label>
-        <input type="date" name="startDate" required placeholder="Start dato">
+            <label>Mail:</label>
+            <input type="text" name="mail" required placeholder="Mail">
 
-        <label>Fødselsdato:</label>
-        <input type="date" name="birthday" required placeholder="Fødselsdato">
+            <label>Start dato:</label>
+            <input type="date" name="startDate" required placeholder="Start dato">
 
-        <label>Telefonnummer:</label>
-        <input type="number" name="phoneNumber" required min="0" max="99999999" step="1" placeholder="Telefonnummer">
+            <label>Fødselsdato:</label>
+            <input type="date" name="birthday" required placeholder="Fødselsdato">
 
-        <input type="submit" name="submit form via POST" value="Opret medlem">
-    </form>
-</article>
+            <label>Telefonnummer:</label>
+            <input type="number" name="phoneNumber" required min="0" max="99999999" step="1" placeholder="Telefonnummer">
 
-<div th:insert="fragments/footer :: footer"></div>
+            <input type="submit" class="btn" name="submit form via POST" value="Opret medlem">
+        </form>
+    </div>
+</div>
 
 </body>
 </html>
