--- a/src/main/resources/templates/listMembers.html
+++ b/src/main/resources/templates/listMembers.html
@@ -10,75 +10,77 @@
 <body>
 
 <div th:insert="fragments/menu :: menu"></div>
-<div th:insert="fragments/sidebar :: sidebar"></div>
 
-<section>
-<article>
-    <form action="/listMembers" method="post">
-        <label>Mænd:</label>
-        <input type="checkbox" name="maleCheck" checked>
-        <input type="hidden" name="maleCheck" value="false">
-        <label>Kvinder:</label>
-        <input type="checkbox" name="femaleCheck" checked>
-        <input type="hidden" name="femaleCheck" value="false">
-        <label>Slettede medlemmer:</label>
-        <input type="checkbox" name="delMembers">
-        <input type="hidden" name="delMembers" value="false">
-        <input type="submit" value="Filtrer">
-    </form>
+<div class="row" style="background-color: #dddddd">
+    <div class="columnsidebar" style="background-color: black" th:insert="fragments/sidebar :: sidebar"></div>
 
-    <table>
-        <tr>
-            <th>ID</th>
-            <th>Fornavn</th>
-            <th>Efternavn</th>
-            <th>Køn</th>
-            <th>Mail</th>
-            <th>Start dato</th>
-            <th>Fødselsdag</th>
-            <th>Telefonnummer</th>
-            <th>Stop dato</th>
-            <th></th>
-        </tr>
 
-        <tr th:each="member : ${members}">
-            <td th:text="${member.getId()}"></td>
-            <td th:text="${member.getFirstName()}"></td>
-            <td th:text="${member.getLastName()}"></td>
-            <div th:with="result = ${member.getIsFemale() == 1}">
-                <span th:if="${result}">
-                    <td>Kvinde</td>
-                </span>
-                <span th:unless="${result}">
-                    <td>Mand</td>
-                </span>
-            </div>
+    <div class="column">
+        <form action="/listMembers" method="post">
+            <label>Mænd:</label>
+            <input type="checkbox" name="maleCheck" checked>
+            <input type="hidden" name="maleCheck" value="false">
+            <label>Kvinder:</label>
+            <input type="checkbox" name="femaleCheck" checked>
+            <input type="hidden" name="femaleCheck" value="false">
+            <label>Slettede medlemmer:</label>
+            <input type="checkbox" name="delMembers">
+            <input type="hidden" name="delMembers" value="false">
+            <input type="submit" class="btn" value="Filtrer">
+        </form>
 
-            <td th:text="${member.getMail()}"></td>
-            <td th:text="${member.getStartDate()}"></td>
-            <td th:text="${member.getBirthday()}"></td>
-            <td th:text="${member.getPhoneNumber()}"></td>
-            <td th:text="${member.getStopDate()}"></td>
-            <td>
-                <div th:with="result = ${member.getIsDeleted() == 0}">
+        <table>
+            <tr>
+                <th>ID</th>
+                <th>Fornavn</th>
+                <th>Efternavn</th>
+                <th>Køn</th>
+                <th>Mail</th>
+                <th>Start dato</th>
+                <th>Fødselsdag</th>
+                <th>Telefonnummer</th>
+                <th>Stop dato</th>
+                <th></th>
+            </tr>
+
+            <tr th:each="member : ${members}">
+                <td th:text="${member.getId()}"></td>
+                <td th:text="${member.getFirstName()}"></td>
+                <td th:text="${member.getLastName()}"></td>
+                <div th:with="result = ${member.getIsFemale() == 1}">
                     <span th:if="${result}">
-                        <button class="btn-ed btn"><a style="text-decoration: none; color: white" th:href="@{/members/editMember/__${member.getId()}__}">Rediger medlem</a></button>
-                        <div th:id="${'deleteBtn' + member.getId()}">
-                            <button class="btn-del btn" th:onclick="'javascript:confirmDelete(\'' + ${member.getId()} + '\');'">Slet</button>
-                        </div>
+                        <td>Kvinde</td>
                     </span>
                     <span th:unless="${result}">
-                        <div th:id="${'permDeleteBtn' + member.getId()}">
-                            <button class="btn-del btn" th:onclick="'javascript:permDelete(\'' + ${member.getId()} + '\');'">Slet permanent</button>
-                        </div>
+                        <td>Mand</td>
                     </span>
                 </div>
-            </td>
-        </tr>
-    </table>
-</article></section>
 
-<div th:insert="fragments/footer :: footer"></div>
+                <td th:text="${member.getMail()}"></td>
+                <td th:text="${member.getStartDate()}"></td>
+                <td th:text="${member.getBirthday()}"></td>
+                <td th:text="${member.getPhoneNumber()}"></td>
+                <td th:text="${member.getStopDate()}"></td>
+                <td>
+                    <div th:with="result = ${member.getIsDeleted() == 0}">
+                        <span th:if="${result}">
+                            <button class="btn-ed btn"><a style="text-decoration: none; color: white" th:href="@{/members/editMember/__${member.getId()}__}">Rediger medlem</a></button>
+                            <div th:id="${'deleteBtn' + member.getId()}">
+                                <button class="btn-del btn" th:onclick="'javascript:confirmDelete(\'' + ${member.getId()} + '\');'">Slet</button>
+                            </div>
+                        </span>
+                        <span th:unless="${result}">
+                            <div th:id="${'permDeleteBtn' + member.getId()}">
+                                <button class="btn-del btn" th:onclick="'javascript:permDelete(\'' + ${member.getId()} + '\');'">Slet permanent</button>
+                            </div>
+                        </span>
+                    </div>
+                </td>
+            </tr>
+        </table>
+    </div>
+</div>
+
 
 </body>
 <script type="text/javascript">
@@ -109,7 +111,7 @@
                 {
                     type: 'submit',
                     class:'btn-del btn',
-                    value: 'confirm',
+                    value: 'Bekræft',
                     name: 'submit'
                 }
             )
@@ -152,7 +154,7 @@
                 {
                     type: 'submit',
                     class:'btn-del btn',
-                    value: 'confirm',
+                    value: 'Bekræft',
                     name: 'submit'
                 }
             )
