Test om date ting virker

--- a/src/main/resources/templates/listMembers.html
+++ b/src/main/resources/templates/listMembers.html
@@ -26,7 +26,13 @@
             <label>Slettede medlemmer:</label>
             <input type="checkbox" name="delMembers">
             <input type="hidden" name="delMembers" value="false">
+            <label>Max alder</label>
+            <input type="number" name="maxAge" placeholder="100" value="100">
+            <label>Min alder</label>
+            <input type="number" name="minAge" placeholder="0" value="0">
+
             <input type="submit" class="btn" value="Filtrer">
+
         </form>
 
         <table>
