--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -7,53 +7,19 @@
 </head>
 <!--NOTE: AUTHORS OF THIS CLASS: ALLE-->
 <body>
-<!--
-<div th:fragment="menu">
-    <div class="container topNav"><>
-        <a href="/" class="a-topNav-border" th:classappend="${#httpServletRequest.getRequestURI().matches('/') ? 'active' : ''}">Home</a>
-        <a href="/rentMotorhome/rent" class="a-topNav-border" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/rentMotorhome') ? 'active':''}"  >Rent</a>
-        <a href="/activeMotorhome/available" class="a-topNav-border" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/activeMotorhome') ? 'active':''}"  >Active</a>
-        <div class="dropdown a-topNav-border" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/motorhomes') ? 'active':''}">
-            <button>Motorhome ↓</button>
-            <div class="dropdown-content" >
-                <a class="dropdown-a" href="/motorhomes/createMotorhome">New Motorhome</a>
-                <a class="dropdown-a" href="/motorhomes/list">All motorhomes</a>
-            </div>
-        </div>
-        <div class="dropdown a-topNav-border" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/customer') ? 'active':''}">
-            <button>Customer ↓</button>
-            <div class="dropdown-content" >
-                <a class="dropdown-a" href="/customer/create">New customer</a>
-                <a class="dropdown-a" href="/customer/list">Customer list</a>
-            </div>
-        </div>
 
-
-    </div>
-</div>
--->
-
-<!--https://css-tricks.com/solved-with-css-dropdown-menus/-->
 
     <nav th:fragment="menu">
         <div class="container topNav">
         <ul>
             <li><a href="/" th:classappend="${#httpServletRequest.getRequestURI().matches('/') ? 'active' : ''}">Forside</a></li>
-<!--            <li><a href="/rentMotorhome/rent"  th:classappend="${#httpServletRequest.getRequestURI().startsWith('/rentMotorhome') ? 'active':''}">Nyheder</a></li>-->
-<!--            <li><a href="/activeMotorhome/available"  th:classappend="${#httpServletRequest.getRequestURI().startsWith('/activeMotorhome') ? 'active':''}">Stævner</a></li>-->
             <li><a href="#"  th:classappend="${#httpServletRequest.getRequestURI().startsWith('/members') ? 'active':''}"  >Medlemmer</a>
-                <!-- First Tier Drop Down -->
                 <ul>
                     <li><a href="/members/createMember" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/members/createMember') ? 'active':''}">Opret Medlem</a></li>
                     <li><a href="/members/listMembers" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/members/listMembers') ? 'active':''}">Medlems Liste</a></li>
                 </ul>
             </li>
-            <li><a href="#">Kalender</a>
-                <!-- First Tier Drop Down -->
-                <ul>
-                    <li><a href="/customer/create" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/customer') ? 'active':''}">Stævner</a></li>
-                    <li><a href="/customer/list" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/customer') ? 'active':''}">Arrangermenter</a></li>
-                </ul>
+            <li><a href="/calendar" th:classappend="${#httpServletRequest.getRequestURI().startsWith('/calendar') ? 'active':''}">Kalender</a>
             </li>
         </ul>
         </div>
