--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -21,6 +21,21 @@ h1, h2, h3, h4, h5, h6, p, label {
     font-family: Lobster;
 }
 
+input[type=checkbox] {
+    justify-content: left;
+    margin-left: -750px;
+}
+
+select {
+    -webkit-appearance: menulist-button;
+    width: 96%;
+    max-width: 96%;
+    font-size: 16px;
+    line-height: 1.3;
+    box-sizing: border-box;
+    height: 30px;
+}
+
 /*-------https://css-tricks.com/solved-with-css-dropdown-menus/-------------*/
 /*------------------------------NAVIGATION MENU-----------------------------*/
 
